# ros_ora26

./: .gitignore  .gitmodules  README.md
ora_camera/: CMakeLists.txt  package.xml
ora_camera/config/: ora_camera_params.yaml
ora_camera/launch/: usb_camera.launch.py
ora_description/: CMakeLists.txt  package.xml
ora_description/description/: anteater.urdf.xacro  anteater_core.xacro  camera.xacro  caster.xacro  dimensions.xacro  ros2_control.xacro  sensors.xacro  wheel.xacro
ora_description/launch/: gazebo.launch.yaml  rsp.launch.py  rsp.launch.yaml
ora_description/models/construction_barrel_simple_collision/: model.sdf
ora_description/models/simple_construction_barrel/: model-1_3.sdf
ora_description/rviz/: config.rviz
ora_description/worlds/: igvc_world.sdf
ora_edge_detection/: package.xml  setup.cfg  setup.py
ora_edge_detection/ora_edge_detection/: edge_detection.py
ora_integration/: CMakeLists.txt  README.md  package.xml
ora_integration/ESP32_IMU_Micro_ROS/: ESP32_IMU_Micro_ROS.h  ESP32_IMU_Micro_ROS.hpp  ESP32_IMU_Micro_ROS.ino
ora_integration/launch/: esp_imu.launch.yaml
ora_launch/: CMakeLists.txt  package.xml
ora_launch/config/: fusioncore_config.yaml  real_controller.yaml
ora_launch/launch/: fusioncore.launch.py  robot.launch.py  robot.launch.yaml  sim.launch.py  sim.launch.yaml
ora_launch/scripts/: wait_for_prereqs.py
ora_lidar/: CMakeLists.txt  package.xml
ora_lidar/config/: laser_filter_config.yaml
ora_lidar/launch/: VLP16.launch.py  filter.launch.yaml
ora_localization/: CMakeLists.txt  package.xml
ora_localization/config/: fusioncore_config.yaml  rl-ekf.yaml  rl_ekf.yaml  sim_rl_gps_ekf.yaml
ora_localization/launch/: fusioncore.launch.py  fusioncore.launch.yaml  rl.launch.py  rl.launch.yaml
ora_navigation/: CMakeLists.txt  package.xml
ora_navigation/config/: gps_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  original_nav2_params.yaml  waypoints.yaml
ora_navigation/include/: gps_waypoint_follower.hpp
ora_navigation/launch/: nav.launch.yaml  ora_nav2_bringup.launch.py  slam_toolbox.launch.yaml  ublox.launch.yaml
ora_navigation/src/: gps_waypoint_follower.cpp
ora_perception/: CMakeLists.txt  package.xml
ora_perception/config/: VLP16.yaml
ora_perception/launch/: VLP16.launch.py  filter.launch.yaml
ora_perception/ora_perception/: edge_detection.py
ora_rgbd_camera/: CMakeLists.txt  package.xml
ora_rgbd_camera/launch/: rgbd_camera_bridge.launch.xml
ora_sim/: CMakeLists.txt  package.xml
ora_sim/config/: bridge_config.yaml  sim_controller.yaml
ora_sim/env_config/: ora_sim_gz_path.sh.in
ora_sim/launch/: gazebo.launch.yaml  gz_pose_to_gps.py
ora_sim/models/grass_plane/: model.config  model.sdf
ora_sim/models/grass_plane/materials/scripts/: igvc_grass.material
ora_sim/models/lane_curve_pair_2m/: model.config  model.sdf
ora_sim/models/lane_straight_pair_2m/: model.config  model.sdf
ora_sim/models/lane_straight_pair_6m/: model.config  model.sdf
ora_sim/models/lane_straight_single_2m/: model.config  model.sdf
ora_sim/models/lane_straight_single_6m/: model.config  model.sdf
ora_sim/models/pothole/: model.config  model.sdf
ora_sim/models/sawhorse/: model.config  model.sdf
ora_sim/models/sawhorse/meshes/: sawhorse_1.dae
ora_sim/models/simple_construction_barrel/: model.config  model.sdf
ora_sim/worlds/: igvc_world.sdf
ora_teleop/: CMakeLists.txt  package.xml
ora_teleop/config/: bt_xbox.yaml  twist_mux.yaml  wired_xbox.yaml
ora_teleop/include/: controller_node.hpp
ora_teleop/launch/: teleop.launch.yaml
ora_teleop/src/: controller_node.cpp
zed-jetson/: Dockerfile  README.md  docker-compose.yml  ora-zed.service  run.sh
zed-jetson/config/: zed_params.yaml
zed-jetson/update-repo/: update-repo.service  update-repo.sh  update-repo.timer
