<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ora_camera</name>
  <version>0.0.1</version>
  <description>ROS 2 package for USB camera support on the ORA26 robot using usb_cam driver</description>
  <maintainer email="ankurjaiswal@oakland.edu">ankurjswl</maintainer>
  <license>Apache-2.0</license>  <!-- or BSD-3-Clause, MIT — common in ROS student projects -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>usb_cam</depend>

  <!-- For compressed image transport (republish node) -->
  <exec_depend>image_transport_plugins</exec_depend>

  <!-- Testing (optional but good to keep) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
