<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ora_rgbd_camera</name>
  <version>0.0.0</version>
  <description>Generic RGBD Depth Camera</description>
  <maintainer email="robotics-4772@todo.todo">robotics-4772</maintainer> <!-- mhm yup yeah mhm yep sure yeah -->  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


<!-- Idk if I will need these:
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>marine_acoustic_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
-->
